# zava-agent-framework

./: .env.example  README.md  backend.py  main.py  pyproject.toml  start_ui.py  zava_concept_rejection_20250925_111058.md  zava_workflow_diagram.mmd  zava_workflow_diagram_20250925_111031.mmd
core/: __init__.py  agents.py  approval.py  executors.py  workflow_manager.py
sample_data/: sample_clothing_concept.pptx
sample_ppt/: bad_winter_pitch.pptx
services/: __init__.py  pitch_parser.py  report_generator.py
static/: app.js  index.html  style.css
